2001-01-22  Eric Busboom  <eric@softwarestudio.org>

	* icaltime.c implemented icaldurationtype_from_string to parse the
 	string it self, rather than use lex/yacc

2001-01-15  Eric Busboom  <eric@softwarestudio.org>

	* icalfileset.c Many improvements. File locking now works, and so
 	does searching with icalfileset_select()

2001-01-08  Eric Busboom  <eric@softwarestudio.org>

	* Makefile.am Remove spaces after -I in several 
	Makefile.am routines. 

	* icalset.c removed return statements from some void functions.

	* icalparameter.c.in Added break to default: case that had no
 	body. Compilers on Solaris and Tru64 UNIX complained.

2001-01-02  Eric Busboom  <eric@softwarestudio.org>

	* icaltime.c Changed icaldurationtype_from_time and _as_timet to
 	_from_int and _as_int. This is a change interface that may break
 	some code.

	* icalgauge.c icalgaugeimpl.h, icalgauge.h., Rewrote gauge code to
 	use pvl-lists directly, instead of trying to reuse icalcomponent.

2000-12-12  Eric Busboom  <eric@softwarestudio.org>

	* icalparser.c Addedd support for x-parameters. 

	* icalenum.c Fixed icalenum_parameter_type_to_string and
 	icalenum_property_type_to_string to property identify X- parameers
 	and properties.

	* icalparameter.c Fixed icalparameter_as_ical_string to property
 	write out X-Parameters.

	
2000-12-11  Eric Busboom  <eric@softwarestudio.org>

	* icalcstp.c added empty bodies to prep_* routines so that shared
 	libraries would build.

2000-12-11  JP Rosevear  <jpr@helixcode.com>

	* src/libical/icaltime.c (icaltime_compare_date_only): New
	function that compares only the dates, not the times as well.

	* src/libical/icaltime.h: Add prototype for the function above.

	* src/libical/icalrecur.h (struct icalrecurrencetype): Correct
	header documentation.

	* src/libical/icaltypes.c: No longer include <limits.h>.

	* src/libical/icalrecur.c: Likewise.

	* src/libical/icalvalue.c: Likewise.

	* src/libical/icalyacc.y: Likewise.
