@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/libical/ical.h)
-AM_INIT_AUTOMAKE(libical,0.22) 
+AM_INIT_AUTOMAKE(libical,0.22a) 
 AM_CONFIG_HEADER(config.h)
 
 dnl  Initialize maintainer mode
