@@ -3,7 +3,7 @@
   FILE: icalvalue.c
   CREATOR: eric 02 May 1999
   
-  $Id: icalvalue.c.in,v 1.3 2001-01-23 07:03:17 ebusboom Exp $
+  $Id: icalvalue.c.in,v 1.4 2001-01-23 18:11:53 ebusboom Exp $
 
 
  (C) COPYRIGHT 2000, Eric Busboom, http://www.softwarestudio.org
@@ -456,15 +456,18 @@ icalvalue* icalvalue_new_from_string_with_error(icalvalue_kind kind,const char* 
 
 	case ICAL_DATETIMEPERIOD_VALUE:
         case ICAL_DURATION_VALUE:
-        case ICAL_PERIOD_VALUE:
-	    {
+         case ICAL_PERIOD_VALUE:
+	{
 	    value = icalparser_parse_value(kind,str,error);
 	    break;
 	}
 	
         case ICAL_TRIGGER_VALUE:
-	
-
+	{
+	    struct icaltriggertype tr = icaltriggertype_from_string(str);
+	    value = icalvalue_new_trigger(tr);
+	    break;
+	}
 
 	default:
 	{
@@ -982,16 +985,16 @@ char* icalvalue_trigger_as_ical_string(icalvalue* value) {
 
     struct icaltriggertype data;
     char* str;
-    icalvalue *e;
-
 
     icalerror_check_arg_rz( (value!=0),"value");
     data = icalvalue_get_trigger(value);
 
-    str = (char*)icalmemory_tmp_buffer(60);
-    sprintf(str,"icalvalue_trigger_as_ical_string is not implemented yet");
+    if(!icaltime_is_null_time(data.time)){
+	return icaltime_as_ical_string(data.time);
+    } else {
+	return icaldurationtype_as_ical_string(data.duration);
+    }   
 
-    return str;
 }
 
 const char*
